# UCDCOIN

./: CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  Makefile.in  SECURITY.md  aclocal.m4  configure  configure.ac  libunitedcontinentaldollarconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  unitedcontinentaldollar.sln  unitedcontinentaldollar_config.h  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  unitedcontinentaldollar-cli.bash-completion  unitedcontinentaldollar-qt.pro  unitedcontinentaldollar-tx.bash-completion  unitedcontinentaldollard.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  (+3 more)
doc/man/: Makefile.am  Makefile.in  unitedcontinentaldollar-cli.1  unitedcontinentaldollar-qt.1  unitedcontinentaldollar-tx.1  unitedcontinentaldollar-wallet.1  unitedcontinentaldollard.1
(+860 files in other folders)
