dist_man1_MANS=

if BUILD_UNITEDCONTINENTALDOLLARD
  dist_man1_MANS+=unitedcontinentaldollard.1
endif

if ENABLE_QT
  dist_man1_MANS+=unitedcontinentaldollar-qt.1
endif

if BUILD_UNITEDCONTINENTALDOLLAR_CLI
  dist_man1_MANS+=unitedcontinentaldollar-cli.1
endif

if BUILD_UNITEDCONTINENTALDOLLAR_TX
  dist_man1_MANS+=unitedcontinentaldollar-tx.1
endif

if ENABLE_WALLET
if BUILD_UNITEDCONTINENTALDOLLAR_WALLET
  dist_man1_MANS+=unitedcontinentaldollar-wallet.1
endif
endif
